AX: Fix build failure for WK API WTF::String usage https://bugs.webkit.org/show_bug.cgi?id=226204 Source/WebKit:

Reviewed by Tim Horton.

Build fix for WTF string usage.

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKAccessibilityTestingInjectPreference):
* WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:

Tools:

<rdar://problem/78428840>

Reviewed by Tim Horton.

* WebKitTestRunner/InjectedBundle/mac/AccessibilityControllerMac.mm:
(WTR::AccessibilityController::injectAccessibilityPreference):


Canonical link: https://commits.webkit.org/238100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277987 268f45cc-cd09-0410-ab3c-d52691b4dbfc